2020-11-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcross.cpp (gfrSubsectionURR): modified
	* source/gfrcsurr.cpp: updated
	URR for LRF=1 cases added, but LRF = 0, LFW = 1 case never tested

	* source/gfrcs1.cpp: updated
	* source/gfrcs3.cpp: updated
	pre-calculate penetrabilities at resonance energies
	and keep the resonance object until LastCall() is invoked

2020-11-18  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrformula.cpp (gfrReichMoore): bug fixed
	in the case channel spin is given, but J is uniquely determined,
	skip the channel spin dependent part

2020-11-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcs7.cpp: updated
	code structure re-organized, and inelastic channel included
	(gfrResonancePenetrability): new function
	* source/gfrcs3.cpp: updated
	(gfrResonancePenetrability): new function
	penetrability calculation depdending on NRO and NAPS moved to new functions
	these two are alomost the same

	* source/gfrcs1.cpp: updated
	* source/gfrcsurr.cpp: updated
	* source/gfr.h: updated
	* source/gfr.cpp: updated
	cross section calculations for some NRO/NAPS combinations updated

	* source/gfrenergy.cpp (gfrAutoEnergyURR): modified
	energy grid for a special case where only URR parameters are given added

2020-11-14  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.h (class ChannelWaveFunc): modified
	(class RMLChannel): new class
	class Wfunc renamed, and updated
	RMLChannel stores channel info

	* source/gfrcross.cpp (gfrPenetrability): modified
	Hankel functions are stored by setData method,
	and setPhase copies only phase parameters


2020-11-09  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/coulomb.h: new file
	* source/coulomb.cpp: new file
	* source/gfr.cpp (gfrPrintCrossSection): updated
	* source/gfr.h (class GFRcross): new class
	* source/gfrcs7.cpp: updated
	charged particle channels added to LRF=7, R-matrix limited
	Coulomb function source code incorporated

2020-11-01  KAWANO Toshihiko  <kawano@lanl.gov>
