@@ -6,6 +6,7 @@
 
 #include <iostream>
 #include <iomanip>
+#include <cstdlib>
 #include <cmath>
 #include <complex>
 
