@@ -58,7 +58,7 @@ void DeceGenerateGroup(ENDFDict *dict, ENDF *lib[], const int group, const int w
   /*** check if total is given */
   int id = dict->getID(3,1);
   if(id < 0){
-    message << "MF3 MT1 should exit for processing";
+    message << "MF3 MT1 should exist for processing";
     WarningMessage();
     return;
   }
