@@ -4,6 +4,12 @@
 /**                                                                          **/
 /******************************************************************************/
 
+#ifndef __CSTDLIB__
+#define __CSTDLIB__
+#include <cstdlib>
+#endif
+
+
 /**************************************/
 /*      Initial memory Size           */
 /**************************************/
